<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/rf_showPhotoIv"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="200dp"
            android:src="@mipmap/df" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/up_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_take_picture" />
            <Button
                android:id="@+id/up_open_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_open_album" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/up_userName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:hint="@string/upload_form_name"
            android:maxLength="10" />

        <EditText
            android:id="@+id/up_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:hint="@string/upload_form_email"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/up_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload_btn_confirm" />

            <Button
                android:id="@+id/up_retry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload_btn_retry" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>