<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".wangze.DetailInformationFragment">

   <ImageView
       android:layout_marginTop="10sp"
       android:id="@+id/rrdf_showFaceIv"
       android:layout_width="match_parent"
       android:layout_weight="2"
       android:layout_height="0dp">
   </ImageView>

    <TextView
        android:id="@+id/rrdf_user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="60sp">
    </TextView>
    <TextView
        android:id="@+id/rrdf_user_info"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:text="@string/detail_age"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>
        <TextView
            android:id="@+id/rrdf_user_age"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView

            android:text="@string/detail_beauty"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>
        <TextView
            android:id="@+id/rrdf_user_beauty"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:text="@string/detail_emotion"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>
        <TextView
            android:id="@+id/rrdf_user_emotion"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </TextView>
    </LinearLayout>

</LinearLayout>